👍 add guards
