# mycv/src/reports/reports.entity.ts
@@ -1,9 +1,14 @@
-import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
+import { Entity, Column, PrimaryGeneratedColumn, ManyToOne } from 'typeorm';
+import { User } from 'src/users/user.entity';
 
 @Entity()
 export class Report {
   @PrimaryGeneratedColumn()
   id: number;
+  @Column({
+    default: false,
+  })
+  approved: boolean;
   @Column()
   price: number;
   @Column()
@@ -18,4 +23,6 @@ export class Report {
   lat: number;
   @Column()
   mileage: number;
+  @ManyToOne(() => User, (user) => user.reports)
+  user: User;
 }
